<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">V2Students</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="pass_fail">Show Pass/Fail</string>
    <string name="new_student">New Record</string>
    <string name="marksheet">Show Marksheet</string>
    <string name="rank">Show Ranks</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="roll">Roll Number</string>
    <string name="enter">Enter Roll Number</string>
    <string name="submit">Submit</string>
    <string name="student_app">New Studnet</string>

</resources>