<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        android:id="@+id/tvRollNo"
        android:textSize="25sp"
        />
    <EditText 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter"
        android:id="@+id/etRollNo"
        />
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btSubmit"
        />

</LinearLayout>